--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <p class="about-text">
         I am 21 years old and currently studying my 8th semester of Computer Science Engineering at
-        CETYS Universidad Tijuana. I am passionate about solving real-world problems using mobile development,
+        CETYS Universidad Tijuana. I am passionate about solving real-world problems using software development,
         teamwork and clean engineering practices.
     </p>
 </section>
