--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Nuno – Software Developer</title>
+    <title>Daniel Nuño – Software Developer</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpeg" href="img/danielnuno.jpg">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +15,7 @@
     <div class="nav-left">
         <img src="img/danielnuno.jpg" class="profile-img">
         <div class="nav-title">
-            <h3>Daniel Nuno</h3>
+            <h3>Daniel Nuño</h3>
             <p>Software Developer</p>
         </div>
     </div>
@@ -46,7 +46,7 @@
         Download CV
     </a>
     <h2 class="hero-subtitle">Software Developer</h2>
-    <h1 class="hero-title">Daniel Nuno</h1>
+    <h1 class="hero-title">Daniel Nuño</h1>
     <p class="hero-desc">Hybrid Software Development</p>
 
     <div class="tech-icons">
@@ -171,7 +171,7 @@
 
 <section id="about" class="about fade-in">
     <h4 class="section-subtitle">About me</h4>
-    <h2 class="section-title">Daniel Nuno</h2>
+    <h2 class="section-title">Daniel Nuño</h2>
 
     <img src="img/profile.jpg" class="about-img">
 
@@ -204,7 +204,7 @@
 </section>
 
 <footer class="footer">
-    <p>Developed by Daniel Nuno</p>
+    <p>Developed by Daniel Nuño</p>
 
     <div class="footer-icons">
         <a href="https://www.linkedin.com/in/danielnunomx/" target="_blank">
