--- a/pseudoplay.html
+++ b/pseudoplay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PseudoPlay - Daniel Nuno</title>
+    <title>PseudoPlay - Daniel Nuño</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/jpeg" href="img/danielnuno.jpg">
     <link rel="stylesheet" href="project-styles.css">
@@ -15,7 +15,7 @@
     <div class="nav-left">
         <img src="img/danielnuno.jpg" class="profile-img">
         <div class="nav-title">
-            <h3>Daniel Nuno</h3>
+            <h3>Daniel Nuño</h3>
             <p>Software Developer</p>
         </div>
     </div>
@@ -198,7 +198,7 @@
 </section>
 
 <footer class="footer">
-    <p>Developed by Daniel Nuno</p>
+    <p>Developed by Daniel Nuño</p>
 
     <div class="footer-icons">
         <a href="https://www.linkedin.com/in/danielnunomx/" target="_blank">
